feat(HO-T-14, hadith, delete): Implement mark delete functionality
Add endpoint: `DELETE /api/hadith/v1/story/{id}`, which mark delete changed hadith.
